--- a/views/media.pug
+++ b/views/media.pug
@@ -731,10 +731,10 @@ block content
             //    br
             //    button.donate.btn.btn-success(style="margin-bottom:-10px") Donate
             // UPLOAD DETAILS SECTION WITH VIEWS, UPLOADED DAYS AGO, DURATION ETC
-            div.col-sm-3.uploadDetailsColumn(style="")
+            div.col-sm-3.uploadDetailsColumn(style="padding:0px;")
 
                 // download and whatever else buttons
-                .col-sm-12(style="")
+                .col-sm-12(style="padding:0px;")
 
                     // download button
                     div.change-size-button
