--- a/views/pugJavascript/uploadingJavascript.pug
+++ b/views/pugJavascript/uploadingJavascript.pug
@@ -4,18 +4,30 @@ script.
   $(document).ready(function () {
 
     function checkIfFileSizeAcceptable(){
-      var fileInput = $('#filetoupload');
+      var fileInput = $('.upload-thumbnail-input');
 
       var maxSize = fileInput.data('max-size');
 
+      console.log('max size');
+
+      console.log(maxSize);
+
+
+
       if (fileInput.get(0).files.length) {
         var fileSize = fileInput.get(0).files[0].size; // in bytes
+
+        console.log('file size');
+
+        console.log(fileSize)
 
         if (fileSize > maxSize) {
           return false;
         } else {
           return true
         }
+      } else {
+        return true
       }
     }
 
@@ -286,7 +298,7 @@ script.
               console.log(response);
 
               if (response === 'success') {
-                window.location.href = response.url
+                window.location.href = redirectUrl
               }
 
             },
@@ -297,7 +309,7 @@ script.
               // alert('there was an error');
 
               // no thumbnail added, just redirect to the url
-              window.location.href = response.url
+              window.location.href = redirectUrl
             }
           });
 
@@ -371,6 +383,8 @@ script.
         // Reflect that the file upload has resulted in error
         $('.file-progress').html('File could not be uploaded: (' + response.message + ')');
       });
+
+
       r.on('fileProgress', function (file, response) {
 
         const progress = Math.floor(file.progress() * 100);
