--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -131,6 +131,7 @@ block content
                         | Private
                     br
 
+                  div#scrollToThumbnail
                   div#customThumbnailDiv(style="margin:0 auto;text-align:center;margin-bottom:11px;display:none;")
                     h4.fw(style="margin-bottom:3px;font-size:17px;") (Optional)
                     label.fw(for='title' style="font-size:20px") Custom Thumbnail
