--- a/views/media.pug
+++ b/views/media.pug
@@ -1753,15 +1753,47 @@ block extra_footer_js
 
           return false;
 
-        // space button
+          // space button
         } else if (e.keyCode === 32) {
-            // toggle play/pause button
-            if (mediaPlayer.paused){
-              mediaPlayer.play();
-            } else {
-              mediaPlayer.pause();
-            }
+          // dont scroll down
+          e.preventDefault()
+
+          // toggle play/pause button
+          if (mediaPlayer.paused) {
+            mediaPlayer.play();
+          } else {
+            mediaPlayer.pause();
+          }
+
+          return false
+
+        }
+      } else if (inputElementNotFocused && e.keyCode === 13){
+        mediaPlayer.requestFullscreen();
+      }
+    });
+
+  script.
+    $(document).keypress(function (e) {
+
+      var activeElement = document.activeElement;
+      var inputs = ['input', 'textarea'];
+
+      var plyrElementNotFocused = !document.activeElement.classList.contains('plyr')
+
+      var inputElementNotFocused = inputs.indexOf(activeElement.tagName.toLowerCase()) === -1;
+
+      if (activeElement && plyrElementNotFocused && inputElementNotFocused) {
+
+        if (e.keyCode === 32) {
+          // dont scroll down
+          e.preventDefault()
+
+          return false
+
         }
       }
     });
+
+
 
